Fix icon valign

--- a/client/public/style/icons.less
+++ b/client/public/style/icons.less
@@ -1,6 +1,6 @@
 .nestor-icon-size {
 	display: inline-block;
-	vertical-align: bottom;
+	vertical-align: -.1em;
 
 	width: 1em;
 	height: 1em;
